# RustProject

./: .gitignore  Cargo.toml  README.md  gl-0.1.20.js  index.html  nakama-js.iife.js  quad-nakama.js  sapp_jsutils.js
client/: Cargo.toml
client/src/: game.rs  input.rs  main.rs
client/src/character/: mod.rs
client/src/gui/: button.rs
client/src/io/: configuration.rs  input.rs  mod.rs
client/src/io/input/: keyboard.rs
client/src/menu/: mod.rs
client/src/net/: global_events.rs  mod.rs  remote_player.rs  syncronizer.rs  wasm_nakama.rs
client/src/world/: level.rs  level_builder.rs  mod.rs  player.rs  tile.rs
client/src/world/level/: level_builder.rs  mod.rs
common/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: configuration.rs  game.rs  input.rs  main.rs  player.rs
src/graphics/: animated_texture.rs  mod.rs
src/gui/: button.rs
src/io/: configuration.rs
src/menu/: mod.rs
src/world/: level.rs  level_builder.rs  mod.rs  player.rs  tile.rs
