[workspace]
members = [
    "client",
    # "server"
]

[profile.release]
lto = true # Results in faster code at the cost of greater compile times
codegen-units = 1
opt-level = 3 # Maximum optimization for speed
incremental = false # Prevents the saving of compile data to disk which speeds up the next compile (saves a lot of space)