[package]
name = "brawlstars-rs-client"
version = "0.0.1"
authors = [
    "Rhys Holloway <rhyswilliamholloway@gmail.com>", 
    "Johnny Lin", 
    "Nareg K."
]
description = """
Shared project for learning Rust, attempt to make a clone of the game Brawlstars
"""
repository = "https://github.com/DoNotDoughnut/RustProject"
edition = "2018"
build = "build/build.rs"
readme = "README.md"
default-run = "brawlstars-rs-client"
publish = false

[dependencies]

macroquad = { git = "https://github.com/DoNotDoughnut/macroquad", features = ["serde", "experimental"] } # Game engine
parking_lot = "0.11" # Thread-safe variables
serde = { version = "1.0", features = ["derive"] } # Serialization / Deserialization
serde_json = "1.0"
lazy_static = "1.4" # For global variables
async-trait = "0.1"