[package]
name = "brawlstars-rs-server"
version = "0.1.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laminar = "0.4"
anyhow = "1.0"
pico-args = "0.4"

simplelog = "0.9" # Replace
log = "0.4"